--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
       </div>
 
       <div class="owl-carousel gallery-carousel">
-        <a href="img/1.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/1.jpg" alt=""></a>
+        <a href="img/1.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/1.JPG" alt=""></a>
         <a href="img/2.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/2.jpg" alt=""></a>
         <a href="img/3.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/3.jpg" alt=""></a>
         <a href="img/4.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/4.jpg" alt=""></a>
