--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
           <img src="iicilogo.png" alt="" style="width:50%"; height="50%">
         </div>
         <div class="column">
-          <img src="https://connect-assets.prosple.com/cdn/ff/C36HkCZun5VehARxcN76h_TFTb4NTIT6V39vNfa8Ie4/1674498019/public/styles/scale_and_crop_center_224x224/public/2023-01/logo-c-dot-480x480-2023.jpg?itok=R1K5OBi-" alt="Mountains" style="width:50%"; height="50%">
+          <img src="https://connect-assets.prosple.com/cdn/ff/C36HkCZun5VehARxcN76h_TFTb4NTIT6V39vNfa8Ie4/1674498019/public/styles/scale_and_crop_center_224x224/public/2023-01/logo-c-dot-480x480-2023.jpg?itok=R1K5OBi-" alt="" style="width:50%"; height="50%">
         </div>
         <div class="column">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTuW_wrjP0BOM8SPjijhFuxZ2lQ9O760Pz3ZQZB9sdDAQ&s" alt="Mountains" style="width:50%"; height="50%">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTuW_wrjP0BOM8SPjijhFuxZ2lQ9O760Pz3ZQZB9sdDAQ&s" alt="" style="width:50%"; height="50%">
         </div>
         <div class="column">
-          <img src="https://etimg.etb2bimg.com/thumb/msid-57119487,width-1200,resizemode-4/.jpg" alt="Mountains" style="width:50%"; height="50%">
+          <img src="https://etimg.etb2bimg.com/thumb/msid-57119487,width-1200,resizemode-4/.jpg" alt="" style="width:50%"; height="50%">
         </div>
       </div>
       <h1 class="mb-4 pb-0">IETE International Conference<br> <span class="in">IN</span><span class="d">D</span><span class="ia">IA </span></h1>
